# osu-beatmap-watcher

./: Cargo.toml  LICENSE  rustfmt.toml
.github/workflows/: lint.yml  rust.yml  test.yml
src/: gui.rs  lib.rs  main.rs  osu.rs
src/gui/: config.rs  mod.rs  widgets.rs  windows.rs
src/gui/widgets/: beatmap.rs  hamster.rs  hamster_hack.rs  mod.rs
src/osu/: client.rs  http.rs  types.rs
