[package]
name = "osu-beatmap-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.17", features = ["persistence"] }
egui_extras = { version = "0.17", features = ["image"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
image = { version = "0.24", features = ["png"] }
