[package]
name = "osu-beatmap-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { git = "https://github.com/emilk/egui", features = ["persistence"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync"] }
serde = "1.0"
serde_json = "1.0"
serde_repr = "0.1"
image = { version = "0.24", features = ["png"] }
rand = "0.8"
md5 = "0.7"
