[package]
name = "osu-beatmap-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.19", features = ["persistence"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.24", features = ["rt-multi-thread"] }
serde = "1.0"
serde_repr = "0.1"
image = { version = "0.24", features = ["png"] }
rand = "0.8"
